--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -147,45 +147,15 @@
               <li class="p-sidebar-nav__item">
                 <strong>Settings</strong>
                 <ul class="p-sidebar-nav__list">
-<<<<<<< Updated upstream
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/animation-settings' %}is-active{% endif %}" href="/settings/animation-settings">Animations</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/assets-settings' %}is-active{% endif %}" href="/settings/assets-settings">Assets</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/breakpoint-settings' %}is-active{% endif %}" href="/settings/breakpoint-settings">Breakpoints</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/color-settings' %}is-active{% endif %}" href="/settings/color-settings">Color</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/font-settings' %}is-active{% endif %}" href="/settings/font-settings">Font</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/layout-settings' %}is-active{% endif %}" href="/settings/layout-settings">Layout</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/placeholder-settings' %}is-active{% endif %}" href="/settings/placeholder-settings">Placeholders</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/spacing-settings' %}is-active{% endif %}" href="/settings/spacing-settings">Spacing</a>
-                  </li>
-                  <li class="p-sidebar-nav__item">
-                    <a class="p-link--soft {% if path == '/settings/table-layout' %}is-active{% endif %}" href="/settings/table-layout">Table layout</a>
-                  </li>
-=======
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/animation-settings' %}is-active{% endif %}" href="/settings/animation-settings">Animations</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/assets-settings' %}is-active{% endif %}" href="/settings/assets-settings">Assets</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/breakpoint-settings' %}is-active{% endif %}" href="/settings/breakpoint-settings">Breakpoints</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/color-settings' %}is-active{% endif %}" href="/settings/color-settings">Color</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/font-settings' %}is-active{% endif %}" href="/settings/font-settings">Font</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/layout-settings' %}is-active{% endif %}" href="/settings/layout-settings">Layout</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/placeholder-settings' %}is-active{% endif %}" href="/settings/placeholder-settings">Placeholders</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/spacing-settings' %}is-active{% endif %}" href="/settings/spacing-settings">Spacing</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/table-layout' %}is-active{% endif %}" href="/settings/table-layout">Table layout</a></li>
->>>>>>> Stashed changes
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/animation-settings' %}is-active{% endif %}" href="/docs/settings/animation-settings">Animations</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/assets-settings' %}is-active{% endif %}" href="/docs/settings/assets-settings">Assets</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/breakpoint-settings' %}is-active{% endif %}" href="/docs/settings/breakpoint-settings">Breakpoints</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/color-settings' %}is-active{% endif %}" href="/docs/settings/color-settings">Color</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/font-settings' %}is-active{% endif %}" href="/docs/settings/font-settings">Font</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/layout-settings' %}is-active{% endif %}" href="/docs/settings/layout-settings">Layout</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/placeholder-settings' %}is-active{% endif %}" href="/docs/settings/placeholder-settings">Placeholders</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/spacing-settings' %}is-active{% endif %}" href="/docs/settings/spacing-settings">Spacing</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/settings/table-layout' %}is-active{% endif %}" href="/docs/settings/table-layout">Table layout</a></li>
                 </ul>
               </li>
 
