--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -87,36 +87,36 @@
               <li class="p-sidebar-nav__item">
                 <strong>Components</strong>
                 <ul class="p-sidebar-nav__list">
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/accordion' %}is-active{% endif %}" href="/patterns/accordion">Accordion</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/article-pagination' %}is-active{% endif %}" href="/patterns/article-pagination">Article pagination</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/breadcrumbs' %}is-active{% endif %}" href="/patterns/breadcrumbs">Breadcrumbs</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/buttons' %}is-active{% endif %}" href="/patterns/buttons">Buttons</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/card' %}is-active{% endif %}" href="/patterns/card">Cards</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/contextual-menu' %}is-active{% endif %}" href="/patterns/contextual-menu">Contextual menu</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/grid' %}is-active{% endif %}" href="/patterns/grid">Grid</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/heading-icon' %}is-active{% endif %}" href="/patterns/heading-icon">Heading icon</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/icons' %}is-active{% endif %}" href="/patterns/icons">Icons</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/images' %}is-active{% endif %}" href="/patterns/images">Images</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/inline-images' %}is-active{% endif %}" href="/patterns/inline-images">Inline images</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/labels' %}is-active{% endif %}" href="/patterns/labels">Labels</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/links' %}is-active{% endif %}" href="/patterns/links">Links</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/list-tree' %}is-active{% endif %}" href="/patterns/list-tree">List tree</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/lists' %}is-active{% endif %}" href="/patterns/lists">Lists</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/matrix' %}is-active{% endif %}" href="/patterns/matrix">Matrix</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/media-object' %}is-active{% endif %}" href="/patterns/media-object">Media object</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/modal' %}is-active{% endif %}" href="/patterns/modal">Modal</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/muted-heading' %}is-active{% endif %}" href="/patterns/muted-heading">Muted heading</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/navigation' %}is-active{% endif %}" href="/patterns/navigation">Navigation</a><div class="p-label--updated u-float-right u-no-margin--bottom">Updated</div></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/notification' %}is-active{% endif %}" href="/patterns/notification">Notifications</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/pagination' %}is-active{% endif %}" href="/patterns/pagination">Pagination</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/pull-quote' %}is-active{% endif %}" href="/patterns/pull-quote">Quotes</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/search-box' %}is-active{% endif %}" href="/patterns/search-box">Search box</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/slider' %}is-active{% endif %}" href="/patterns/slider">Slider</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/strip' %}is-active{% endif %}" href="/patterns/strip">Strip</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/switch' %}is-active{% endif %}" href="/patterns/switch">Switch</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/table-of-contents' %}is-active{% endif %}" href="/patterns/table-of-contents">Table of contents</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/tabs' %}is-active{% endif %}" href="/patterns/tabs">Tabs</a></li>
-                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/tooltips' %}is-active{% endif %}" href="/patterns/tooltips">Tooltips</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/accordion' %}is-active{% endif %}" href="/docs/patterns/accordion">Accordion</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/article-pagination' %}is-active{% endif %}" href="/docs/patterns/article-pagination">Article pagination</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/breadcrumbs' %}is-active{% endif %}" href="/docs/patterns/breadcrumbs">Breadcrumbs</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/buttons' %}is-active{% endif %}" href="/docs/patterns/buttons">Buttons</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/card' %}is-active{% endif %}" href="/docs/patterns/card">Cards</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/contextual-menu' %}is-active{% endif %}" href="/docs/patterns/contextual-menu">Contextual menu</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/grid' %}is-active{% endif %}" href="/docs/patterns/grid">Grid</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/heading-icon' %}is-active{% endif %}" href="/docs/patterns/heading-icon">Heading icon</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/icons' %}is-active{% endif %}" href="/docs/patterns/icons">Icons</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/images' %}is-active{% endif %}" href="/docs/patterns/images">Images</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/inline-images' %}is-active{% endif %}" href="/docs/patterns/inline-images">Inline images</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/labels' %}is-active{% endif %}" href="/docs/patterns/labels">Labels</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/links' %}is-active{% endif %}" href="/docs/patterns/links">Links</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/list-tree' %}is-active{% endif %}" href="/docs/patterns/list-tree">List tree</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/lists' %}is-active{% endif %}" href="/docs/patterns/lists">Lists</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/matrix' %}is-active{% endif %}" href="/docs/patterns/matrix">Matrix</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/media-object' %}is-active{% endif %}" href="/docs/patterns/media-object">Media object</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/modal' %}is-active{% endif %}" href="/docs/patterns/modal">Modal</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/muted-heading' %}is-active{% endif %}" href="/docs/patterns/muted-heading">Muted heading</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/navigation' %}is-active{% endif %}" href="/docs/patterns/navigation">Navigation</a><div class="p-label--updated u-float-right u-no-margin--bottom">Updated</div></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/notification' %}is-active{% endif %}" href="/docs/patterns/notification">Notifications</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/pagination' %}is-active{% endif %}" href="/docs/patterns/pagination">Pagination</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/pull-quote' %}is-active{% endif %}" href="/docs/patterns/pull-quote">Quotes</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/search-box' %}is-active{% endif %}" href="/docs/patterns/search-box">Search box</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/slider' %}is-active{% endif %}" href="/docs/patterns/slider">Slider</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/strip' %}is-active{% endif %}" href="/docs/patterns/strip">Strip</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/switch' %}is-active{% endif %}" href="/docs/patterns/switch">Switch</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/table-of-contents' %}is-active{% endif %}" href="/docs/patterns/table-of-contents">Table of contents</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/tabs' %}is-active{% endif %}" href="/docs/patterns/tabs">Tabs</a></li>
+                  <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/docs/patterns/tooltips' %}is-active{% endif %}" href="/docs/patterns/tooltips">Tooltips</a></li>
                 </ul>
               </li>
 
