--- a/templates/docs/examples/patterns/side-navigation/default.html
+++ b/templates/docs/examples/patterns/side-navigation/default.html
@@ -5,50 +5,55 @@
 
 {% block content %}
 <div class="p-side-navigation">
-    <div class="p-side-navigation__group">
-      <span class="p-side-navigation__item--title">
-        <span class="p-side-navigation__text">Heading</span>
-      </span>
+  <ul class="p-side-navigation__list">
+    <li class="p-side-navigation__item--title">
+      <span class="p-side-navigation__text">Heading</span>
+    </li>
+    <li class="p-side-navigation__item">
+      <a class="p-side-navigation__link is-selected" href="#">Snap Store buttons</a>
       <ul class="p-side-navigation__list">
         <li class="p-side-navigation__item">
-          <a class="p-side-navigation__link is-selected" href="#">Snap Store buttons</a>
-                    <ul class="p-side-navigation__list">
-        <li class="p-side-navigation__item">
-          <a class="p-side-navigation__link" href="#">Snap Store buttons</a>
-        </li>
-        <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link is-active" href="#">GitHub badges</a>
-        </li>
-        <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link" href="#">Embeddable cards make it wrap</a>
-        </li>
-      </ul>
-        </li>
-        <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link" href="#">GitHub badges</a>
-        </li>
-        <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link" href="#">Embeddable cards</a>
-        </li>
-      </ul>
-    </div>
-    <div class="p-side-navigation__group">
-      <span class="p-side-navigation__item--title">
-        <a class="p-side-navigation__link">Heading</a>
-      </span>
-      <ul class="p-side-navigation__list">
-        <li class="p-side-navigation__item is-selected">
           <a class="p-side-navigation__link" href="#">Snap Store buttons</a>
         </li>
         <li class="p-side-navigation__item ">
           <a class="p-side-navigation__link" href="#">GitHub badges</a>
         </li>
         <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link" href="#">Embeddable cards</a>
+          <a class="p-side-navigation__link is-selected" href="#">Embeddable cards make it wrap</a>
+          <ul class="p-side-navigation__list">
+            <li class="p-side-navigation__item">
+              <a class="p-side-navigation__link" href="#">Third level of side nav</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link is-active" href="#">GitHub badges on third level</a>
+            </li>
+            <li class="p-side-navigation__item ">
+              <a class="p-side-navigation__link" href="#">Embeddable cards on third level</a>
+            </li>
+          </ul>
         </li>
       </ul>
-    </div>
-  </div>
-
-
+    </li>
+    <li class="p-side-navigation__item ">
+      <a class="p-side-navigation__link" href="#">GitHub badges</a>
+    </li>
+    <li class="p-side-navigation__item ">
+      <a class="p-side-navigation__link" href="#">Embeddable cards</a>
+    </li>
+  </ul>
+  <ul class="p-side-navigation__list">
+    <li class="p-side-navigation__item--title">
+      <a class="p-side-navigation__link">Heading</a>
+    </li>
+    <li class="p-side-navigation__item">
+      <a class="p-side-navigation__link" href="#">Snap Store buttons</a>
+    </li>
+    <li class="p-side-navigation__item ">
+      <a class="p-side-navigation__link" href="#">GitHub badges</a>
+    </li>
+    <li class="p-side-navigation__item ">
+      <a class="p-side-navigation__link" href="#">Embeddable cards</a>
+    </li>
+  </ul>
+</div>
 {% endblock %}
