Fix accordion borders, make list border selector simpler

--- a/scss/_patterns_accordion.scss
+++ b/scss/_patterns_accordion.scss
@@ -10,9 +10,7 @@
   }
 
   .p-accordion__group {
-    position: relative;
-
-    & + &::after {
+    & + & {
       @extend %vf-pseudo-border--top;
     }
   }
