Use light theme colours

--- a/scss/_patterns_side-navigation.scss
+++ b/scss/_patterns_side-navigation.scss
@@ -58,15 +58,15 @@
 // theme
 @mixin vf-side-navigation-theme(
   // default text color in sidebar
-    $color-sidenav-text-default: $color-mid-dark,
+    $color-sidenav-text-default: $colors--light-theme--text-disabled,
   // text color of highlighted items
-    $color-sidenav-text-active: $color-dark,
+    $color-sidenav-text-active: $colors--light-theme--text-default,
   // background color of active/hovered items
-    $color-sidenav-item-background-highlight: $color-light,
+    $color-sidenav-item-background-highlight: $colors--light-theme--background-highlighted,
   // border color of active item
     $color-sidenav-item-border-highlight: $color-brand,
   // border color of items list
-    $color-sidenav-list-border: $color-mid-x-light
+    $color-sidenav-list-border: $colors--light-theme--border-default
 ) {
   .p-side-navigation {
     color: $color-sidenav-text-default;
