Add muted text color variable to light theme

--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -41,6 +41,7 @@ $colors--light-theme--border-default: #cdcdcd !default;
 $colors--light-theme--border-high-contrast: #999 !default;
 $colors--light-theme--text-hover: #757575 !default;
 $colors--light-theme--text-disabled: #666 !default;
+$colors--light-theme--text-muted: #666 !default;
 $colors--light-theme--text-default: #111 !default;
 
 //text-hover: minimum contrast on primary that satisfies contrast checker AA
@@ -49,4 +50,6 @@ $colors--dark-theme--background-highlighted: hsl(0, 0%, 20%) !default;
 $colors--dark-theme--border-default: hsl(0, 0%, 27%) !default;
 $colors--dark-theme--border-high-contrast: hsl(0, 0%, 42%) !default;
 $colors--dark-theme--text-hover: hsl(0, 0%, 56%) !default;
+// TODO: add --text-disabled
+// TODO: add --text-muted
 $colors--dark-theme--text-default: hsl(0, 0%, 100%) !default;
