--- a/templates/docs/examples/patterns/side-navigation/default.html
+++ b/templates/docs/examples/patterns/side-navigation/default.html
@@ -13,7 +13,7 @@
       <a class="p-side-navigation__link" href="#">First level link</a>
     </li>
     <li class="p-side-navigation__item">
-      <a class="p-side-navigation__link is-selected" href="#">Selected link</a>
+      <a class="p-side-navigation__link" href="#">Link with children</a>
       <ul class="p-side-navigation__list">
         <li class="p-side-navigation__item">
           <a class="p-side-navigation__link" href="#">Second level link</a>
@@ -22,7 +22,7 @@
           <span class="p-side-navigation__text">Second level text</span>
         </li>
         <li class="p-side-navigation__item ">
-          <a class="p-side-navigation__link is-selected" href="#">Second level selected link</a>
+          <a class="p-side-navigation__link" href="#">Second level link with children</a>
           <ul class="p-side-navigation__list">
             <li class="p-side-navigation__item">
               <span class="p-side-navigation__text">Third level text</span>
@@ -52,7 +52,7 @@
       <span class="p-side-navigation__text">First level text</span>
     </li>
     <li class="p-side-navigation__item">
-      <span class="p-side-navigation__text is-selected">Selected text item</span>
+      <span class="p-side-navigation__text">Text item with children</span>
       <ul class="p-side-navigation__list">
         <li class="p-side-navigation__item">
           <a class="p-side-navigation__link" href="#">Second level link</a>
@@ -61,7 +61,7 @@
           <span class="p-side-navigation__text">Second level text</span>
         </li>
         <li class="p-side-navigation__item ">
-          <span class="p-side-navigation__text is-selected">Second level selected text item</span>
+          <span class="p-side-navigation__text">Second level text with children</span>
           <ul class="p-side-navigation__list">
             <li class="p-side-navigation__item">
               <span class="p-side-navigation__text">Third level text</span>
