--- a/templates/docs/examples/patterns/side-navigation/docs.html
+++ b/templates/docs/examples/patterns/side-navigation/docs.html
@@ -27,7 +27,7 @@
       <a class="p-side-navigation__link" href="#">Commission machines</a>
     </li>
     <li class="p-side-navigation__item">
-      <span class="p-side-navigation__text is-selected">Testing</span>
+      <span class="p-side-navigation__text">Testing</span>
       <ul class="p-side-navigation__list">
         <li class="p-side-navigation__item">
           <a class="p-side-navigation__link" href="#">Hardware testings</a>
