Don'c clip dropdown box shadow

--- a/scss/_patterns_subnav.scss
+++ b/scss/_patterns_subnav.scss
@@ -100,9 +100,8 @@
     z-index: 5;
 
     @media (min-width: $breakpoint-navigation-threshold + 1) {
-      clip: rect(0, 1000px, 1000px, -10px); /* Clip the top of the box-shadow off */
       position: absolute;
-      top: calc(#{$spv-inner--medium * 4} - 1px);
+      top: $spv-inner--medium * 4;
     }
 
     @media (max-width: $breakpoint-navigation-threshold) {
